GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 2.7 (2010-09-16) [stable]

** Bug fixes

  grep --include=FILE works once again, rather than working like --exclude=FILE
  [bug introduced in grep-2.6]

  Searching with grep -Fw for an empty string would not match an
  empty line. [bug present since "the beginning"]

  X{0,0} is implemented correctly.  It used to be a synonym of X{0,1}.
  [bug present since "the beginning"]

  In multibyte locales, regular expressions including backreferences
  no longer exhibit quadratic complexity (i.e., they are orders
  of magnitude faster). [bug present since multi-byte character set
  support was introduced in 2.5.2]

  In UTF-8 locales, regular expressions including "." can be orders
  of magnitude faster.  For example, "grep ." is now twice as fast
  as "grep -v ^$", instead of being immensely slower.  It remains
  slow in other multibyte locales. [bug present since multi-byte
  character set support was introduced in 2.5.2]

  --mmap was meant to be ignored in 2.6.x, but it was instead
  removed by mistake.  [bug introduced in 2.6]

** New features

  grep now diagnoses (and fails with exit status 2) commonly mistyped
  regular expression like [:space:], [:digit:], etc.  Before, those were
  silently interpreted as [ac:eps] and [dgit:] respectively.  Virtually
  all who make that class of mistake should have used [[:space:]] or
  [[:digit:]].  This new behavior is disabled when the POSIXLY_CORRECT
  environment variable is set.

  On systems using glibc, grep can support equivalence classes.  However,
  whether they actually work depends on glibc's locale definitions.

* Noteworthy changes in release 2.6.3 (2010-04-02) [stable]

** Bug fixes

  Searching with grep -F for an empty string in a multibyte locale
  would hang grep. [bug introduced in 2.6.2]

  PCRE support is once again detected on systems with <pcre/pcre.h>