@@ -2,6 +2,12 @@ GNU grep NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  grep's interpretation of range expression is now more consistent with
+  that of other tools.  [bug present since multi-byte character set
+  support was introduced in 2.5.2, though the steps needed to reproduce
+  it changed in grep-2.6]
 
 * Noteworthy changes in release 2.7 (2010-09-16) [stable]
 
